--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <div class="container" data-aos="fade-up">
     <h2 class="fw-bold">Have an idea worth building?</h2>
     <p class="opacity-75 mt-3">Let’s create something meaningful.</p>
-    <a href="mailto:hello@pahalsoft.com"
+    <a href="mailto:lokeshpahal@gmail.com"
        class="btn btn-success btn-lg rounded-pill px-5 mt-4">
       Get in touch
     </a>
