--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- OpenGraph -->
   <meta property="og:title" content="PahalSoft — Mobile Apps Crafted with Care">
   <meta property="og:description" content="Clean, thoughtful mobile apps built with care.">
-  <meta property="og:image" content="https://pahalsoft.com/assets/og.png">
+  <meta property="og:image" content="https://pahalsoft.com/assets/logo-invert.png">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://pahalsoft.com">
 
@@ -37,7 +37,9 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-transparent">
   <div class="container">
-    <a class="navbar-brand fw-semibold" href="#home">PahalSoft</a>
+    <a class="navbar-brand fw-semibold" href="#home">
+      <img src="assets/logo-invert.png" alt="PahalSoft" height="30">
+    </a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -86,7 +88,7 @@
       <p class="fs-5">
         “PahalSoft builds apps that feel calm, focused, and incredibly reliable.”
       </p>
-      <footer class="text-muted mt-2">— Early Pillzy User</footer>
+      <footer class="text-muted mt-2">— Early MyMoneyWiz User</footer>
     </blockquote>
   </div>
 </section>
